Implements a single pathway for consuming evaluation messages with java subscribers.
Refs #83835